--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f3f3f3;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Kumbh Sans", "Manrope", "Roboto", "Lato", sans-serif;
 }
 
 .parent-header {
