--- a/css/style_blog.scss
+++ b/css/style_blog.scss
@@ -6,6 +6,14 @@
 
 .parent-blog{
     margin-top:110px;
+    &>h4{
+        padding-left: 20px;
+        font-size:3rem;
+        margin:10px 0px;
+        @include device-max-700{
+            font-size:2rem
+        }
+    }
     .blog{
         max-width: $max-width;
         margin: auto;
