--- a/css/_header.scss
+++ b/css/_header.scss
@@ -13,7 +13,7 @@ body{
     margin:0;
     padding:0;
     background-color: #f3f3f3;
-    font-family: "Kumbh Sans", sans-serif;
+    font-family: $font
 }
 
 .parent-header{
