--- a/css/_utils.scss
+++ b/css/_utils.scss
@@ -2,11 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 // font-family: 'Kumbh Sans', sans-serif;
+// font-family: 'Kumbh Sans','Manrope','Roboto','Lato', sans-serif;
 // font-family: 'Manrope', sans-serif;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Lato', sans-serif;
-// variables
 
+// variables
+$font: 'Kumbh Sans','Manrope','Roboto','Lato', sans-serif;
 $color-1:white;
 $color-2:#05001a;
 $color-3:#57F1B1;
