--- a/css/style_blog.css
+++ b/css/style_blog.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f3f3f3;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Kumbh Sans", "Manrope", "Roboto", "Lato", sans-serif;
 }
 
 .parent-header {
@@ -163,6 +163,16 @@ body {
 
 .parent-blog {
   margin-top: 110px;
+}
+.parent-blog > h4 {
+  padding-left: 20px;
+  font-size: 3rem;
+  margin: 10px 0px;
+}
+@media screen and (max-width: 700px) {
+  .parent-blog > h4 {
+    font-size: 2rem;
+  }
 }
 .parent-blog .blog {
   max-width: 1000px;
