--- a/css/style_gallery.css
+++ b/css/style_gallery.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f3f3f3;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Kumbh Sans", "Manrope", "Roboto", "Lato", sans-serif;
 }
 
 .parent-header {
@@ -185,6 +185,11 @@ body {
   margin: 15px auto;
   width: 300px;
   height: 300px;
+}
+@media screen and (max-width: 700px) {
+  .parent-galerie .galerie__item {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style_gallery.css.map */
