--- a/css/style_gallery.scss
+++ b/css/style_gallery.scss
@@ -26,7 +26,10 @@
             background-size: cover;
             margin: 15px auto;
             width: 300px;
-            height:300px
+            height:300px;
+            @include device-max-700{
+                width: 100%;
+            }
         }
     }
 }
