--- a/css/style_services.css
+++ b/css/style_services.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f3f3f3;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Kumbh Sans", "Manrope", "Roboto", "Lato", sans-serif;
 }
 
 .parent-header {
@@ -170,11 +170,22 @@ body {
   color: #05001a;
   text-align: center;
 }
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo > h4 {
+    font-size: 3rem;
+  }
+}
 .parent-whatWeDo .whatWeDo {
+  font-family: "Kumbh Sans", "Manrope", "Roboto", "Lato", sans-serif;
   display: flex;
   max-width: 1000px;
   justify-content: space-between;
   margin: auto;
+}
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo .whatWeDo {
+    flex-direction: column;
+  }
 }
 .parent-whatWeDo .whatWeDo__item {
   padding: 40px;
@@ -182,6 +193,12 @@ body {
   text-align: center;
   color: #05001a;
   background-color: white;
+}
+@media screen and (max-width: 700px) {
+  .parent-whatWeDo .whatWeDo__item {
+    width: 100%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
 }
 .parent-whatWeDo .whatWeDo__item i {
   font-size: 3rem;
