--- a/css/style_gallery.scss
+++ b/css/style_gallery.scss
@@ -21,7 +21,7 @@
         margin:auto;
 
         &__item{
-            background-image: url('/img/for-professionals-1000x700.jpg');
+            // background-image: url('/img/for-professionals-1000x700.jpg');
             background-position: center center;
             background-size: cover;
             margin: 15px auto;
@@ -29,6 +29,25 @@
             height:300px;
             @include device-max-700{
                 width: 100%;
+            }
+
+            &:nth-child(1){
+                background-image: url('/img/88176.jpg');
+            }
+            &:nth-child(2){
+                background-image: url('/img/unnamed.jpg');
+            }
+            &:nth-child(3){
+                background-image: url('/img/Hospital-Beds.jpg');
+            }
+            &:nth-child(4){
+                background-image: url('/img/hospital.jpg');
+            }
+            &:nth-child(5){
+                background-image: url('/img/Moore-CovidAfrica.jpg');
+            }
+            &:nth-child(6){
+                background-image: url('/img/file-20210111-23-1s1uykk.jpg');
             }
         }
     }
